Fixed overflow on player name ribbons.

--- a/screen/src/sass/_minigameInfo.scss
+++ b/screen/src/sass/_minigameInfo.scss
@@ -22,12 +22,20 @@
 		width: calc(16.6667% - 6px);
 		
 		.player-ribbon {
+			position: relative;
+			overflow: hidden;
 			background-color: $ui_darkgreen;
 			height: calc(11% - 20px);
 			margin-top: 10px;
 			padding: 5px;
 			
 			h5 {
+				position: absolute;
+				overflow: hidden;
+				white-space: nowrap;
+				text-overflow: ellipsis;
+				top: calc(50% - 10px);
+				width: calc(100% - 20px);
 				margin: 0;
 				font-size: 20px;
 			}
